# INF200-2019-Exersices

./: README.rst  setup.cfg
src/helge_helo_klemetsdal_ex/ex01/: comp_to_loop.py  deck_by_comp.py  letter_counts.py  tidy_code.py
src/helge_helo_klemetsdal_ex/ex02/: bubble_sort.py  file_stats.py  message_entropy.py
src/helge_helo_klemetsdal_ex/ex03/: test_median.py  test_sorting.py
src/helge_helo_klemetsdal_ex/ex03_project/: test_median.py  test_sorting.py
src/helge_helo_klemetsdal_ex/pa01/: chutes.py  chutes_analysis.ipynb  snakes_and_ladders.py
