[metadata]
name = helge_helø_klemetsdal_ex
version = 0.0.1
description = Exersices for INF200
author = Helge Helø Klemetsdal
author_email = helge.helo@gmail.com
    
[options]
packages = find:
package_dir = 
    =src
include_package_data = True
install_requires = 

[options.packages.find]
where=src

